skapa undersida tfredrik_bystrom.htmlIssue: Vi skapar våra egna sidor

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 </head>
 
 <body>
+<div>
 
-<h1>Hackaton Grupp 3</h1>
+    <h1>Hackaton Grupp 3</h1>
 
-<ul>
-    <li><a href="alexander_nilsson.html">Alexander Nilsson</a></li>
-    <li><a href="tero_viitala.html">Tero Viitala</a></li>
-    <li><a href="fredrik_bystom.html">Fredrik Byström</a></li>
-</ul>
+    <ul>
+        <li><a href="script/alexander_nilsson.html">Alexander Nilsson</a></li>
+        <li><a href="script/tero_viitala.html">Tero Viitala</a></li>
+        <li><a href="script/fredrik_bystrom.html">Fredrik Byström</a></li>
+    </ul>
 
-
+    </div>
 </body>
 </html>
