adds title to head

--- a/script/alexander_nilsson.html
+++ b/script/alexander_nilsson.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Alexander Nilsson</title>
 </head>
 <body>
-    <h1>Hackaton Grupp 3</h1>
+    <h1>Alexander Nilsson</h1>
     <img src="img/piano.jpg" alt="Grand Piano">
     <ul>
         <li>Spela piano</li>
@@ -16,6 +16,6 @@
         <li>Kolla film</li>
     </ul>
     <a href="https://github.com/alex-nil">Alex Github</a>
-    <a href="script/index.html">Till index.html</a>
+    <a href="index.html">Till index.html</a>
 </body>
 </html>
