ÃÄndrat stavfek ll schack i linje 16 Isuseue: Vi skapar våra sidor

--- a/tero_viitala.html
+++ b/tero_viitala.html
@@ -13,7 +13,7 @@
     <ul>
         <li style="color:gray">Räkna</li>
         <li style="color:gray">Rita</li>
-        <li style="color:gray">Spela chack</li>
+        <li style="color:gray">Spela schack</li>
         <li style="color:grey">Konstruera</li>
     </ul>
     <a href="https://github.com/treox">GitHub Tero Viitala</a><br/>
