--- a/tero_viitala.html
+++ b/tero_viitala.html
@@ -7,6 +7,7 @@
     <title>tero_viitala</title>
 </head>
 <body>
+    <div>
     <h1 style="font-size: 28px">Tero Viitala</h1>
     <img src="DSC_0649_3.jpg" alt="Bild på Tero Viitala" width="140px" height="180px">
     <h3>4 saker Tero är bra på:</h3>
@@ -18,5 +19,6 @@
     </ul>
     <a href="https://github.com/treox">GitHub Tero Viitala</a><br/>
     <a href="index.html">index.html</a>
+    </div>
 </body>
 </html>
