--- a/script/alexander_nilsson.html
+++ b/script/alexander_nilsson.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Alexander Nilsson</h1>
-    <img src="img/piano.jpg" alt="Grand Piano">
+    <img src="../img/piano.jpg" alt="Grand Piano">
     <ul>
         <li>Spela piano</li>
         <li>Springa</li>
@@ -16,6 +16,6 @@
         <li>Kolla film</li>
     </ul>
     <a href="https://github.com/alex-nil">Alex Github</a>
-    <a href="index.html">Till index.html</a>
+    <a href="../">Till index.html</a>
 </body>
 </html>
