fixat referenser Issue: Lagg filer i mappar

--- a/script/tero_viitala.html
+++ b/script/tero_viitala.html
@@ -9,7 +9,7 @@
 <body>
     <div>
     <h1 style="font-size: 28px">Tero Viitala</h1>
-    <img src="DSC_0649_3.jpg" alt="Bild på Tero Viitala" width="140px" height="180px">
+    <img src="../img/DSC_0649_3.jpg" alt="Bild på Tero Viitala" width="140px" height="180px">
     <h3>4 saker Tero är bra på:</h3>
     <ul>
         <li style="color:gray">Räkna</li>
@@ -18,7 +18,7 @@
         <li style="color:grey">Konstruera</li>
     </ul>
     <a href="https://github.com/treox">GitHub Tero Viitala</a><br/>
-    <a href="index.html">index.html</a>
+    <a href="../">index.html</a>
     </div>
 </body>
 </html>
