ÃChanged in index and fredrik_bystrom

--- a/index.html
+++ b/index.html
@@ -2,10 +2,45 @@
 <head>
     <title>Hackaton Grupp 3</title>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
+    <style>
+        body {
+            margin-top: 65px;
+            background-color: black;
+        }
+        h1 {
+            font-family: 'Cinzel', serif;
+            font-size: 45pt;
+            color: white;
+        }
+
+        .cen {
+            text-align: center;
+            margin: auto;
+            width: 50%;
+            padding: 10px;
+            font-size: 20pt;
+        }
+
+        li {
+            list-style-type: none;
+            padding: 5px;
+        }
+
+        a {
+            color: silver;
+            text-decoration: none;
+        }
+
+        a:hover{
+            color: silver;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
-<div>
+<div class="cen">
 
     <h1>Hackaton Grupp 3</h1>
 
