--- a/script/alexander_nilsson.html
+++ b/script/alexander_nilsson.html
@@ -4,7 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
     <title>Alexander Nilsson</title>
+
+    <style>
+        body {
+            margin-top: 35px;
+            background-color: black;
+            color: white;
+        }
+        h1 {
+            font-family: 'Cinzel', serif;
+            font-size: 45pt;
+            color: white;
+        }
+
+        .cen {
+            text-align: center;
+            margin: auto;
+            width: 50%;
+            padding: 10px;
+            font-size: 20pt;
+        }
+
+        li {
+            padding: 5px;
+            color:#f39c12;
+            text-align: left;
+            margin-left: 50px;
+        }
+
+        a {
+            color: lightblue;
+            font-size: 20px;
+        }
+
+        a:hover{
+            color: silver;
+        }
+    </style>
 </head>
 <body>
     <h1>Alexander Nilsson</h1>
