--- a/script/alexander_nilsson.html
+++ b/script/alexander_nilsson.html
@@ -45,8 +45,9 @@
     </style>
 </head>
 <body>
+    <div class="cen">
     <h1>Alexander Nilsson</h1>
-    <img src="../img/piano.jpg" alt="Grand Piano">
+    <img src="../img/piano.jpg" alt="Grand Piano" width="50%">
     <ul>
         <li>Spela piano</li>
         <li>Springa</li>
@@ -55,5 +56,6 @@
     </ul>
     <a href="https://github.com/alex-nil">Alex Github</a>
     <a href="../">Till index.html</a>
+    </div>
 </body>
 </html>
