La till blank till href

--- a/script/alexander_nilsson.html
+++ b/script/alexander_nilsson.html
@@ -54,7 +54,7 @@
         <li>Spela gitarr</li>
         <li>Kolla film</li>
     </ul>
-    <a href="https://github.com/alex-nil">Alex Github</a>
+    <a target="blank" href="https://github.com/alex-nil">Alex Github</a>
     <a href="../">Till index.html</a>
     </div>
 </body>
