fixade saker Issue: Tero behover fixa lite saker

--- a/script/tero_viitala.html
+++ b/script/tero_viitala.html
@@ -45,9 +45,8 @@
 </head>
 <body>
     <div class="cen">
-    <h1 style="font-size: 28px">Tero Viitala</h1>
+    <h1>Tero Viitala</h1>
     <img src="../img/DSC_0649_3.jpg" alt="Bild på Tero Viitala" width="140px" height="180px">
-    <h3>4 saker Tero är bra på:</h3>
     <ul>
         <li>Räkna</li>
         <li>Rita</li>
