--- a/script/alexander_nilsson.html
+++ b/script/alexander_nilsson.html
@@ -55,7 +55,7 @@
         <li>Kolla film</li>
     </ul>
     <hr color="white">
-    <a target="blank" href="https://github.com/alex-nil">Alex Github</a>
+    <a target="blank" href="https://github.com/alex-nil">Alex Github</a> |
     <a href="../">Till index.html</a>
     </div>
 </body>
